navigation tablet fix

--- a/styles/layout/nav.scss
+++ b/styles/layout/nav.scss
@@ -9,7 +9,7 @@
   @apply lg:mt-8 py-2;
 
   .inner-container {
-    @apply flex justify-between items-center w-[80%] 2xl:w-[70%];
+    @apply flex justify-between items-center w-[80%] 2xl:w-[70%] relative;
 
     // LOGO
     .logo-container {
@@ -29,7 +29,11 @@
         @apply flex flex-row justify-end m-0 z-10 list-none;
 
         li {
-          @apply hidden lg:inline-block font-extralight text-3xl text-slate-100 px-4;
+          display: none;
+          @media screen and (min-width: 1025px) {
+            display: inline-block;
+          }
+          @apply font-extralight text-3xl text-slate-100 px-4;
 
           a {
             cursor: pointer;
@@ -154,7 +158,7 @@
     }
 
     .menu-burger {
-      display: none;
+      @apply hidden lg:block;
 
       @media screen and (max-width: 768px) {
         transform: translate(-100%, -50%) !important;
@@ -162,7 +166,6 @@
       }
       @media screen and (max-width: 1024px) {
         width: max-content;
-        display: block;
         position: absolute;
         top: 50%;
         right: 0;
@@ -179,7 +182,11 @@
 }
 // LANGUAGE NAME
 .lang-name {
-  @apply hidden lg:flex items-center cursor-pointer uppercase font-bold ml-2;
+  display: none;
+  @media screen and (min-width: 1025px) {
+    display: flex;
+  }
+  @apply items-center cursor-pointer uppercase font-bold ml-2;
 
   .arrow {
     transition: 0.3s ease-in-out;
